added music player page

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -41,17 +41,17 @@
 			<a href="/">go back home</a>
 			<h3>navigation</h3>
 
+			<h4>pages</h4>
+			<a href="songs/index.html" target="iframe_a">fav songs</a>
+			<a href="fav-albums.html">fav albums</a>
+			<a href="cds.html">CD collection</a>
+
+			<h4>iframe</h4>
 			<a href="info.html" target="iframe_a">info</a>
-			<a href="artists-genres.html" target="iframe_a">fav artists &amp; genres</a>
 			<a href="featured.html" target="iframe_a">featured music</a>
-			<a href="playlists.html" target="iframe_a">playlists</a>
 			<a href="listening-log/index.html" target="iframe_a">listening logs</a>
 			<a href="kpop-producers.html" target="iframe_a">fav kpop producers</a>
 			<a href="recaps/index.html" target="iframe_a">yearly recaps</a>
-
-			<h4>pages</h4>
-			<a href="fav-albums.html">fav albums</a>
-			<a href="cds.html">CD collection</a>
 
 			<h4>other</h4>
 			<a title="blog post" href="/blog/2023/230912-vocaloid.html" target="_blank">my history with vocaloid</a>
