--- a/doqmeat/music/info.html
+++ b/doqmeat/music/info.html
@@ -27,9 +27,9 @@
 
 		<p>i just wanna have a space where i can talk a lil bit about the stuff i like to listen to while also showcasing it as well.</p>
 
-		<p>my headphones are the infamous <i>razer kraken kitty headset</i> <small>they are honestly great tbh...</small> and my music player of choice is <a href="https://getwacup.com/" target="_blank">WACUP</a> on windows.</p>
+		<p>my headphones are the infamous <i>razer kraken kitty headset</i> <small>they are honestly great tbh...</small> and my music player of choice is <a href="https://getwacup.com/" target="_blank">WACUP</a>! <small><a title="img of music player" href="https://doqmeat.com/microblog/!g/240710-musicplayer.jpg" target="_blank">look how cute...</a></small></p>
 
-		<p>when it comes to <b>streaming</b> stuff, i use bandcamp or youtube preferably. if not, i use <a href="https://www.xmanagerapp.com/" target="_blank">this</a> on my phone :) if i enjoy an album or EP i'll try to get the CD, if not i'll get it digitally.</p>
+		<p>when it comes to <b>streaming</b> stuff, i use bandcamp or youtube preferably. if not, i use <a href="https://www.xmanagerapp.com/" target="_blank">this</a> on my phone :) if i enjoy an album or EP i'll try to get the CD. if not, i'll get it digitally.</p>
 
 		<p>feel free to send me a recommendation through <a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank">e-mail</a> !!! i will gladly listen to it whenever i have some time. i love discovering new music <img src="/!g/pix/catroll.gif"></p>
 
