made older journal pages readable within jounal index

--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -17,7 +17,7 @@ v3 of journal started on 05.jul.24
 	<script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="body.css" rel="stylesheet" type="text/css" media="all">
-	<link href="v4-index.css" rel="stylesheet" type="text/css" media="all">
+	<link href="index.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
