--- a/doqmeat/vgs/fallout-new-vegas/index.html
+++ b/doqmeat/vgs/fallout-new-vegas/index.html
@@ -35,6 +35,10 @@
 		<div class="info"><b>genre/type: </b> shooter, rpg, action </div>
 		<div class="info"><b>status:</b> not finished</div>
 		<h3>logs</h3>
+		<p><span class="date">17.jul.24</span> i was wondering where this little robot was after remembering em' from my first playthrough!</p>
+		<img src="240717%20(2).jpg" width="100%" alt="my courier standing next to ED-E">
+		<p>also i looked up and thought this was really pretty.</p>
+		<img src="240717%20(1).jpg" width="100%" alt="the night sky. cloudy. green. with the NCR flag focused.">
 		<hr>
 		<p><span class="date">16.jul.24</span> this was so embarrassing...</p>
 		<video width="100%" controls>
