cato log + minor changed around other logs

--- a/doqmeat/vgs/cato/index.html
+++ b/doqmeat/vgs/cato/index.html
@@ -25,6 +25,7 @@
 		<div class="info"><b>genre/type: </b>platformer, CAT</div>
 		<div class="info"><b>link: </b><a href="https://store.steampowered.com/app/1999520/CATO_Buttered_Cat/" target="_blank">steam</a>, <a href="https://twitter.com/Cato_TeamWoll" target="_blank">twitter</a></div>
 		<h3>logs</h3>
+		<p><span class="date">17.jul.24</span>i finished the demo yesterday! there was surprisingly A LOT of levels that you could do! 24 to be exact. i fear i might be sounding like a broken record but guys................ i loved it. also the <span class="spoiler">last level was a bit special! it was so cool... </span> my god i really can't wait for this to come out!!!</p>
 		<hr>
 		<p><span class="date">15.jul.24</span> wow so i just updated the demo and it's sooo different from i first played it during summer of 2023!</p>
 		<figure> <img src="demo-2%20(2).jpg" width="100%" alt="menu screen">
