new entries to photobook and microblog

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -36,6 +36,9 @@
 		</article>
 -->
 			<article>
+				<p><b>17.jul.24 - 1am</b> walked for 4 miles yesterday! i need to get myself some nice walking sneakers because all i got are <i>vans</i> and now my feet kinda hurt like crazyyy. but i'm glad i was able to to that! i hope to do it more frequently since i don't have much to do these day. saw some very pretty flowers. <button onclick="showPic('/photobook/!g/240716.jpg','green plant with little lilac flowers','they were so small and cute')">/photobook/!g/240716.jpg</button></p>
+			</article>
+			<article>
 				<p><b>10.jul.24 - 10am</b> recently downloaded <a href="https://getwacup.com/" target="_blank" class="outlink">WACUP</a> after itunes pissing me off so many times <small>asking me to log in every 30 mins...</small> anyways, my music player is looking sick AF <button onclick="showPic('!g/240710-musicplayer.jpg','WACUP player','my WACUP player... so cute')">240710-musicplayer.jpg</button></p>
 			</article>
 
@@ -105,7 +108,7 @@
 			<span id="picture-title"></span>
 			<button onclick="toggleclick('picture-win')" class="x">x</button>
 			<br>
-			<a id="pic-link" title="open in a new tab" href="" target="_blank"><img id="picture" src="" alt=""></a>
+			<a id="pic-link" title="open IMG in a new tab" href="" target="_blank"><img id="picture" src="" alt=""></a>
 			<p id="picture-caption"></p>
 		</div>
 	</main>
