--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -255,6 +255,15 @@ coded with love by des
 
 		<div class="column">
 
+			<div class="pic digi"><img src="!g/240716.jpg">
+				<div class="hov">
+					<div class="caption">
+						cute flowers i saw while walking
+						<br><b>taken on 16.jul.24</b>
+					</div>
+				</div>
+			</div>
+
 			<div class="pic film">
 				<img src="!g/240702-filmscans%20(2).jpg">
 				<div class="hov">
@@ -443,7 +452,7 @@ coded with love by des
 	<div id="home"><a title="go back to homepage" href="/"><img src="/!g/pix/polaroid_5.gif"></a></div>
 
 	<footer>
-		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 02.jul.24</b>
+		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 16.jul.24</b>
 		<br>
 		<b>credit:</b> bg by <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a> / header font by <a href="https://www.dafont.com/growing-garden-script.font" target="_blank">helotype</a> / border-img from <a href="https://fujoshi.nekoweb.org" target="_blank">mimi</a>!
 		<br>
