--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -64,6 +64,7 @@
 		<li><a href="https://doodad.dev/dither-me-this/" target="_blank">dither me this</a> and <a href="https://ditherit.com/" target="_blank">ditherit</a> - dither imgs! i use this A LOT. mostly for backgrounds</li>
 		<li><a href="https://www.w3schools.com/colors/colors_picker.asp" target="_blank">w3schools' color picker</a> - shows you the different hues, contrast, and how the color looks as a background with text!</li>
 		<li><a href="https://docs.emmet.io/cheat-sheet/" target="_blank">emmet cheat sheet</a></li>
+		<li><a href="https://timestampgenerator.com/" target="_blank">time stamp generator</a> / <a href="https://mothereff.in/html-entities" target="_blank">HTML entity encoder</a> - use these for my RSS!</li>
 
 		<h3>some resource pages bookmarks!</h3>
 		<li><a href="https://faegardens333.neocities.org/resources" target="_blank">faegardens333</a> / <a href="https://hekate.neocities.org" target="_blank">hekate</a> / <a href="https://nekonokuni.neocities.org/links" target="_blank">nekonokuni</a> / <a href="https://sadgrl.online/webmastery/webmaster-links" target="_blank">sadgrl.online</a> </li>
@@ -161,6 +162,7 @@
 		<hr>
 
 		<h3 id="tut">tutorials / guides</h3>
+		<li>my guides & tutorials can be found <a href="../tutorials/index.html" target="_blank">here</a>!</li>
 		<li>flexbox: <a href="https://solaria.neocities.org/gallerytut" target="_blank">solaria's simple gallery guide</a> / <a href="https://sadgrl.online/learn/articles/using-flexbox" target="_blank">sadgrl's flexbox guide</a></li>
 		<li>border imgs: <a href="https://solaria.neocities.org/bits/" target="_blank">solaria's custom CSS border imgs</a></li>
 		<li><a href="https://bechnokid.neocities.org/resources/tut_statuscafefeed" target="_blank">status.cafe feed reader!</a></li>
@@ -339,6 +341,7 @@
 		<li><a href="https://webmention.io/" target="_blank">webmention.io</a></li>
 		<li><a href="https://tld-list.com/" target="_blank">tld-list</a> - compare domain prices</li>
 		<li><a href="https://missing.csail.mit.edu/" target="_blank">the missing semester of your CS education</a> - a series of lectures about rarely covered topics in computer science classes such as proficency with the tools you'll be using.</li>
+		<li><a href="https://psychcool.org/links/Personal%20Web%20Map.pdf" target="_blank">personal web map</a> - a bunch of links related to the personal web</li>
 
 		<h3 id="add-on">firefox add-ons</h3>
 		<li><a href="https://addons.mozilla.org/en-US/firefox/addon/activate-reader-view/" target="_blank">force reader view</a></li>
