--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -276,6 +276,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			tabcontent.style.display = "block";
 		}
 		defaultOpen.click();
+		defaultOpen.focus();
 
 	</script>
 </body>
