--- a/doqmeat/vgs/fallout-new-vegas/index.html
+++ b/doqmeat/vgs/fallout-new-vegas/index.html
@@ -34,6 +34,7 @@
 		<div class="info"><b>developer: </b> obsidian entertainment</div>
 		<div class="info"><b>genre/type: </b> shooter, rpg, action </div>
 		<div class="info"><b>status:</b> not finished</div>
+<div class="info"><b>crash count:</b> 4 </div>
 		<h3>logs</h3>
 		<p><span class="date">17.jul.24</span> i was wondering where this little robot was after remembering em' from my first playthrough!</p>
 		<img src="240717%20(2).jpg" width="100%" alt="my courier standing next to ED-E">
