--- a/doqmeat/vgs/fallout-new-vegas/index.html
+++ b/doqmeat/vgs/fallout-new-vegas/index.html
@@ -35,6 +35,8 @@
 		<div class="info"><b>genre/type: </b> shooter, rpg, action </div>
 		<div class="info"><b>status:</b> not finished</div>
 		<h3>logs</h3>
+		<p><span class="date">19.jul.24</span> asked for my boyfriend for a hit on where to find veronica because i somehow missed her on my first playthrough. and i finally met her!!! shes so sweet i love her.</p>
+		<hr>
 		<p><span class="date">17.jul.24</span> i was wondering where this little robot was after remembering em' from my first playthrough!</p>
 		<img src="240717%20(2).jpg" width="100%" alt="my courier standing next to ED-E">
 		<p>also i looked up and thought this was really pretty.</p>
