microblog and updated scrapbook

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -36,6 +36,9 @@
 		</article>
 -->
 			<article>
+				<p><b>20.jul.24 - 11am</b> nothing fills me with more hatred and anger for this government than waking up without power on the sunniest day ever. need a lot of people to rot in hell right now.</p>
+			</article>
+			<article>
 				<p><b>17.jul.24 - 1am</b> walked for 4 miles yesterday! i need to get myself some nice walking sneakers because all i got are <i>vans</i> and now my feet kinda hurt like crazyyy. but i'm glad i was able to to that! i hope to do it more frequently since i don't have much to do these day. saw some very pretty flowers. <button onclick="showPic('/photobook/!g/240716.jpg','green plant with little lilac flowers','they were so small and cute')">/photobook/!g/240716.jpg</button></p>
 			</article>
 			<article>
