journal quick fix

--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -48,7 +48,7 @@ v3 of journal started on 05.jul.24
 			<div id="nav">
 				<img align="right" src="!g/flower-b.gif" style="max-width: 100%;">
 				<h3>logs navigation</h3>
-				<a href="all.html" target="log">view all logs</a>
+				<a href="logs.html" target="log">all logs</a>
 				<details>
 					<summary>2024</summary>
 					<a href="2024/07.html" target="log">july</a>
