--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -42,7 +42,7 @@
 			<h3>navigation</h3>
 
 			<h4>pages</h4>
-			<a href="songs/index.html">fav songs</a>
+			<a href="songs/index.html">fav artists n genres</a>
 			<a href="fav-albums.html">fav albums</a>
 			<a href="cds.html">CD collection</a>
 
