updated button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -109,7 +109,7 @@
 			<a title="kyu - their art radiates such a warm feeling on me.... idk but i really love it here" href="https://kyu.neocities.org" target="_blank"><img src="!g/kyu.gif"></a>
 			<a title="alexandra - AWESOME site with so many links and things to read!" href="https://xandra.cc/" target="_blank"><img src="!g/xandra.png"></a>
 			<a title="leviathren - very cool site. im a big enjoyer of the different themes" href="https://leviathren.neocities.org/" target="_blank"><img src="!g/leviathren.gif"></a>
-			<a title="aubr" href="https://aubr.neocities.org"><img src="!g/aubr.png"></a>
+			<a title="aubr" href="https://410.neocities.org"><img src="!g/aubr.png"></a>
 			<a title="dreambubble - cool site filled with pixels and interesting pages!" href="https://dreambubble.neocities.org/" target="_blank"><img src="!g/dreambubble.gif"></a>
 			<a title="lostlove - cozy site with a nice journal" href="https://lostlove.neocities.org/" target="_blank"><img src="!g/lostlove.gif"></a>
 			<a title="mapplebear - a super sweet and cozy site, i especially love their logs about fashion!" href="https://maplebear.neocities.org/" target="_blank"><img src="!g/maplebear.gif" alt="maplebear"></a>
@@ -163,6 +163,8 @@
 			<a title="surge - found on 32bit cafe discord server! very cool and i love the photography page" href="http://doubleincision.com/" target="_blank"><img src="!g/versipellis.png"></a>
 			<a title="chocolate-cake" href="https://chocolate-cake.neocities.org" target="_blank"><img src="!g/chocolate-cake.gif" alt="chocolate-cake"></a>
 			<a title="chronodove - this site gives me off such an interesting vibe! love their writings" href="https://chronodove.neocities.org/" target="_blank"><img src="https://i.imgur.com/MwpPvJy.png" alt="chronodoves button"></a>
+			<a title="circat" href="https://circat.neocities.org" target="_blank"><img src="!g/circat.png" alt="circat"></a>
+			<a title="petrapixel" href="https://petrapixel.neocities.org" target="_blank"><img src="!g/petrapixel.gif" alt="petrapixel"></a>
 		</div>
 
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
