--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -165,6 +165,7 @@
 			<img src="!g/dreamy.gif">
 			<img src="!g/imbeingputdown.gif">
 			<img src="!g/luvmyputer.gif">
+			<img src="!g/i-love-comments.gif" alt="i love comments">
 			<img src="!g/crying%20and%20throwing%20up.gif">
 			<img src="!g/waterbottle.gif">
 			<img src="!g/strawberrykisses.gif">
