--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -36,6 +36,11 @@
 		</article>
 -->
 			<article>
+				<p><b>23.jul.24 - 1pm</b> after fighting for my life for the past 3 months filling out job applications i finally <b>got a job!!!!!</b> jesus, it was about damn time!!! i'm very happy because i really needed this. <small>who doesn't in this economy...</small> i hope i'll do good here :) i'll be getting some celebratory ice cream tomorrow <imh src="/!g/pix/dumy.gif" alt="emoji"></imh>
+				</p>
+			</article>
+
+			<article>
 				<p><b>20.jul.24 - 11am</b> nothing fills me with more hatred and anger for this government than waking up without power on the sunniest day ever. need a lot of people to rot in hell right now.</p>
 			</article>
 			<article>
