fallout new vegas log

--- a/doqmeat/vgs/fallout-new-vegas/index.html
+++ b/doqmeat/vgs/fallout-new-vegas/index.html
@@ -34,8 +34,23 @@
 		<div class="info"><b>developer: </b> obsidian entertainment</div>
 		<div class="info"><b>genre/type: </b> shooter, rpg, action </div>
 		<div class="info"><b>status:</b> not finished</div>
-		<div class="info"><b>crash / glitch count:</b> 6</div>
+		<div class="info"><b>crash / glitch count:</b> 8</div>
 		<h3>logs</h3>
+		<p><span class="date">24.jul.24</span> there is nothing in my brain except fallout.</p>
+		<p>nobody is asking but i basically manage my inventory on a <b>dumpster</b> that is in <i>goodsprings</i>. right next to this <i>mojave express dropbox</i>. it is honestly the best spot because i can take stuff from the dropbox AND i have a store right next to it as well in case i want to sell something i don't use. <small>though i am a big hoarder...</small> i got this stupid dinky dinosaur whatever the fuck toy from the <i>novac</i> gift shop and put it on top of the dropbox for decoration.</p>
+		<img src="240724%20(1).jpg" alt="screenshot of new vegas. there's a mojave express dropbox shown with a dinosaur toy on top of it as decoration." width="100%">
+		<p>i know this isn't <a href="../fallout-4/index.html">fallout 4</a>. i know. and yet i still yearn for my own little home decorated to the top with the stupid things i come across... so with that said... i have yet to find a nice place that i could potentially make my home. i'd like something nice and with a campfire so i can cook my stuff. i haven't been fucking around much with the benches much tbh...... haven't found much need for them. i probably have all the stuff to make a couple of things. but yeah i simply don't really need them.</p>
+		<figure>
+			<img src="240724%20(3).jpg" alt="screenshot of new vegas" width="100%">
+			<figcaption>made it to new vegas!</figcaption>
+		</figure>
+		<p>anyways. i made it to new vegas and even inside the strip!! but i haven't done much in those places. i really am enjoying this game so much. i love how lively it feels and the side quests have been very engaging as well. fuck finding whoever the fuck shot me in the head. i need to get this emo poet into the followers of the apocalypse!!!!! which btw i had nooo clue they would be in this game!!! i really liked their ideals when i stumbled across them in fallout 1. so pretty cool to see them here.</p>
+		<figure><img src="240724%20(4).jpg" alt="screenshot of new vegas" width="100%">
+			<figcaption>me and my beautiful girlfriend &hearts;</figcaption>
+		</figure>
+		<p>been having a lot of fun with the companions too! the loveliest one has been veronica by far... she's very sweet and i love seeing her punching the shit out of things. i also really like her quest with the brotherhood of steel and how it questions the way they are stagnant and how they can change their ways. other companions that have made me giggle have been arcade gannon and cass. every time i'm with arcade all i think about is the meme that says <i>i want your lil autistic ass to be mine 😘</i>. he's also just really funny too.</p>
+		<p>and while playing this game... i kinda wish i had played fallout 2 first before new vegas since that game is pretty relevant because it's another game that takes place in the west area of the US so like there's a lot of stuff that new vegas references that comes from the first two fallout games. but i just wanted a break from the isometric view and turned based combat. like i LOVED playing through <a href="../fallout-1/index.html">fallout 1</a> but it was pretty hard to get through. so i thought playing new vegas first would be like a nice refresher before jumping into fallout 2. but i think i would have appreciated the small references more if i had played it first, just like i was able to GET and appreciate the stuff that references fallout 1 in new vegas. i'll get to it at some point. i'm really curious about the enclave stuff from the 2nd game. i also just keep thinking about this <a href="https://www.youtube.com/watch?v=zQzhkQ-zmGA" target="_blank">clip</a> from fallout 2 that my boyfriend showed me. fucking hilarious.</p>
+		<hr>
 		<p><span class="date">19.jul.24</span> asked for my boyfriend for a hint on where to find veronica because i somehow missed her on my first playthrough. and i finally met her!!! shes so sweet i love her.</p>
 		<p>oh and this also happened. rip boone</p>
 		<video width="100%" controls>
@@ -92,7 +107,7 @@
 		<p>i'm pretty sure i had my fun in the 30 hrs that i played. i do remember the songs from the radio being a bit samey........... i felt like there were not that many songs in there. at least from my memory.</p>
 		<p>this is my 2nd 3D fallout i've ever played after <a href="/vgs/fallout-4/index.html">fallout 4</a>. gun play is def a bit jankier. but like i can't really bitch about that when it does INDEED have a WAYYY better dialogue (+dialogue system) than FO4. the gay ppl were right. very charming and funny game as well. will probably pick it up again after finishing FO1. someday. on god 🙏</p>
 
-		<h4>screenshots</h4>
+		<h4>old screenshots from previous playthrough</h4>
 		<center>
 			<img src="fonv3.jpg" width="100%">
 			<img src="fonv1.jpg" width="100%">
