minor fix to vgs index

--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -169,7 +169,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv finished vn single">
 			<a title="needy streamer overload" href="needy-streamer/index.html" target="iframe_a"><img src="needy-streamer/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv single cat adv"><a href="neko-odyssey" title="neko odyssey" target="iframe_a"><img src="neko-odyssey/cover.jpg" alt="neko odyssey" tabindex="0"></a></div>
+		<div class="filterDiv single cat adv toplay"><a href="neko-odyssey" title="neko odyssey" target="iframe_a"><img src="neko-odyssey/cover.jpg" alt="neko odyssey" tabindex="0"></a></div>
 		<div class="filterDiv fav finished cat single">
 			<a title="night in the woods" href="nitw/index.html" target="iframe_a"><img src="nitw/cover.jpg" tabindex="0"></a>
 		</div>
