updated featured song n album

--- a/doqmeat/music/featured.html
+++ b/doqmeat/music/featured.html
@@ -65,7 +65,23 @@ iframe2
 -->
 		<details open>
 			<summary>
-				<span class="date">14.jun.24 - ? : the hitchhiker's guide to the galaxy / sonic rush OST</span>
+				<span class="date">27.jul.24 - ? : walls / アダンの風 (adan no kaze)</span>
+			</summary>
+			<table>
+				<td class="t-left">
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SOo1Ge0lQ-c?si=JYzH734p2HESCJgQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					a beautiful shoegaze song i've been listening to for the past year or two. the cover features a character from one of my favorite anime: kaiba. and there's even a sample of one of her lines in the song. i have rewatched <i>kaiba</i> SO many times that i think if you give me enough time i can tell you what that line of hers is saying.
+				</td>
+				<td class="t-right">
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/j1IqZtAlFf8?si=w3qH74_OYJah7TAi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					i've been playing <b>ichiko aoba</b> songs <u>every night</u> before going to sleep because oh my god.... their voice and the MELODIES they use just feel so comforting.... recently played this album wide awake. it really was an amazing experience. i love the waves and the wind and all those little sounds that are spread throughout this release. it really made me feel like i was there.
+				</td>
+			</table>
+		</details>
+
+		<details>
+			<summary>
+				<span class="date">14.jun.24 - 27.jul.24 : the hitchhiker's guide to the galaxy / sonic rush OST</span>
 			</summary>
 			<table>
 				<td class="t-left">
