--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -30,9 +30,8 @@
 		</header>
 		<div id="scroll">
 			<marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()">
+				<b>27.jul.24</b> - updated featured song &amp; album
 				<b>03.jul.24</b> - summer listening log now live!
-				<b>14.jun.24</b> - updated featured section! /
-				<b>12.jun.24</b> - added new CDs in collection
 			</marquee>
 		</div>
 
@@ -46,7 +45,7 @@
 			<a href="fav-albums.html">fav albums</a>
 			<a href="cds.html">CD collection</a>
 
-			<h4>iframe</h4>
+			<h4>mini-pages</h4>
 			<a href="info.html" target="iframe_a">info</a>
 			<a href="featured.html" target="iframe_a">featured music</a>
 			<a href="listening-log/index.html" target="iframe_a">listening logs</a>
@@ -90,17 +89,18 @@
 		<div id="featured" class="box">
 			<h4>featured song &amp; album</h4>
 			<div class="song">
-				<b>The hitchhiker's guide to the galaxy</b> by ARTMS
-				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/bcKKuhIJU6I?si=BPE_mkeGiSzYkEy-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-				what a yummy song, it reminds of my melodic dubstep high school days.
+				<b>walls</b> by asian glow
+				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SOo1Ge0lQ-c?si=JYzH734p2HESCJgQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				a beautiful shoegaze song i've been listening to for the past year or two. the cover features a character from one of my favorite anime: kaiba. and there's even a sample of one of her lines in the song. i have rewatched <i>kaiba</i> SO many times that i think if you give me enough time i can tell you what that line of hers is saying.
 			</div>
 			<div class="lp">
-				<b>sonic rush OST</b> by hideki naganuma
-				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=qsWgPoyvY46Rg7Sd&amp;list=PLvNp0Boas721Cm9CWT9eaSq_JxA3f_NAr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-				I AM SO OBSESSED WITH THIS SOUNDTRACK......
+				<b>アダンの風 (adan no kaze)</b> by ichiko aoba
+				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/j1IqZtAlFf8?si=w3qH74_OYJah7TAi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				i've been playing <b>ichiko aoba</b> songs <u>every night</u> before going to sleep because oh my god.... their voice and the MELODIES they use just feel so comforting.... recently played this album wide awake. it really was an amazing experience. i love the waves and the wind and all those little sounds that are spread throughout this release. it really made me feel like i was there.
 			</div>
 			<hr>
-			<center><small>past featured music can be found <a href="featured.html">here</a></small></center>
+
+			<center><small>past featured music can be found <a title="will open on the iframe above!" href="featured.html" target="iframe_a">here</a></small></center>
 		</div>
 
 		<!-- is he listening-->
