new microblog post

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -36,6 +36,10 @@
 		</article>
 -->
 			<article>
+				<p><b>27.jul.24</b> i don't think i am strong enough to listen to every homestuck soundtrack volume but oh my god.... some of these songs are <b>STILL</b> so fucking good.... i might talk about my favorite ones one day in my music page. tears in my eyes listening to some of these.</p>
+			</article>
+
+			<article>
 				<p><b>23.jul.24 - 1pm</b> after fighting for my life for the past 3 months filling out job applications i finally <b>got a job!!!!!</b> jesus, it was about damn time!!! i'm very happy because i really needed this. <small>who doesn't in this economy...</small> i hope i'll do good here :) i'll be getting some celebratory ice cream tomorrow <imh src="/!g/pix/dumy.gif" alt="emoji"></imh>
 				</p>
 			</article>
