--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -120,13 +120,13 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h3>personal</h3>
 			<a href="/about"><img src="/!g/pix/cateepyy.gif" alt=""> about</a>
 			<a href="/photobook"><img src="/!g/pix/camera.gif" alt=""> photobook</a>
-			<a href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal <img src="/!g/pix/new1.gif" alt="new"></a>
+			<a href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal</a>
 			<a href="/microblog"><img src="/!g/pix/catidea.gif" alt=""> microblog </a>
 			<a href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog <img src="/!g/pix/updated1.gif" alt="updated"></a>
 			<a href="/scrapbook"><img src="!g/pix/scissors6.gif" alt=""> scrapbook</a>
 			<a href="/shrines"><img src="/!g/pix/heart2.gif" alt=""> shrines</a>
 			<a href="/collection"><img src="/!g/pix/pics.gif" alt=""> collections</a>
-			<a title="WIP!" href="/art"><img src="/!g/pix/catdraw.gif" alt=""> art &amp; crafts <img src="!g/pix/new1.gif" alt=""></a>
+			<a title="WIP!" href="/art"><img src="/!g/pix/catdraw.gif" alt=""> art &amp; crafts</a>
 			<h3>media logs</h3>
 			<a href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
 			<a href="/vgs"><img src="/!g/pix/vgs.gif" alt=""> video games</a>
