--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -36,7 +36,7 @@
 		</article>
 -->
 			<article>
-				<p><b>27.jul.24</b> i don't think i am strong enough to listen to every homestuck soundtrack volume but oh my god.... some of these songs are <b>STILL</b> so fucking good.... i might talk about my favorite ones one day in my music page. tears in my eyes listening to some of these.</p>
+				<p><b>27.jul.24</b> i don't think i am strong enough to listen to every homestuck soundtrack volume but oh my god.... some of these songs are <b>STILL</b> so fucking good.... i might talk about my favorite ones one day in my music page. tears in my eyes listening to some of these. also, the music page lowkey needs a rework... i still like the theme but i need to make into a grid instead of using inline-blocks</p>
 			</article>
 
 			<article>
