--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -44,15 +44,16 @@
 
 <body>
 	<div id="iframepc">
+		<p class="hide"><img src="/!g/pix/caution1.gif"> <a href="/vgs" target="_parent">click here to go to index page</a> if you're out of frame!</p>
 		<p>welcome to <span class="gaminglog">doqmeat's gaming log!</span> these are either video games i've enjoyed, currently playing, or want to play! most of the time i'll write my thoughts on them, my progress, share screenshots i've taken, and anything else! spoilers will be <span class="spoiler">hidden!</span></p>
-		<p>click on a <mark>video game thumbnail and content will appear here!</mark> <span class="hide"> <img src="/!g/pix/caution1.gif"> <a href="/vgs" target="_parent">click here to go to index page</a> if you're out of frame!</span>
+		<p>click on a <mark>video game thumbnail and content will appear here!</mark></p>
 
-			<hr>
+		<hr>
 
 		<h3>change log</h3>
 
 		<div id="log">
-			<li>14.jul.24: log: <a href="fallout-new-vegas/index.html">new vegas</a> + added <a href="neko-odyssey/index.html">neko odyssey</a></li>
+			<li>24.jul.24: log: <a href="fallout-new-vegas/index.html">new vegas</a> + added <a href="neko-odyssey/index.html">neko odyssey</a></li>
 			<li>16.jul.24: log: <a href="fallout-new-vegas/index.html">new vegas</a></li>
 			<li>15.jul.24: log: <a href="cato/index.html">cato</a></li>
 			<li>14.jul.24: log: <a href="fallout-new-vegas/index.html">new vegas</a></li>
@@ -86,6 +87,7 @@
 		<p>i pretty much grew up playing video games :3 i'd write more in here but i don't got much else to say at the moment. video games fun.</p>
 		<p><b>consoles i've had:</b> <s title="i don't remember what happened but it broke in the middle. maybe i let it fell...">DS lite</s>, <s title="the ring of death or whatever">xbox 360</s>, <s title="gave it to my cousin when i got a 3DS">DSi</s>, <s title="i think we sold this...">wii</s>, 3DS, wii u, <s title="i think i just need to buy a wired controller so i can be able to play it again LOL">PS4</s>, switch lite</p>
 		<p>honorable mention to my poor non-gamer laptops i've had to run games that weren't meant to be played in them.</p>
+		<p>which btw, feel free to add me on <a href="https://steamcommunity.com/id/lakiitu/" target="_blank">steam</a>!</p>
 
 		<hr>
 
