--- a/doqmeat/music/kpop-producers.html
+++ b/doqmeat/music/kpop-producers.html
@@ -40,7 +40,7 @@
 
 <body>
 
-	<div id="frame">
+	<main>
 
 		<h1>fav kpop producers</h1>
 		<p><small>
@@ -116,7 +116,7 @@
 			<li>drippin - utopia</li>
 			<li>lovelyz - obliviate</li>
 		</ul>
-	</div>
+	</main>
 	<footer>
 		<b>last updated on 12.dec.23</b>
 		<br>
