--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -165,6 +165,8 @@
 			<a title="chronodove - this site gives me off such an interesting vibe! love their writings" href="https://chronodove.neocities.org/" target="_blank"><img src="https://i.imgur.com/MwpPvJy.png" alt="chronodoves button"></a>
 			<a title="circat" href="https://circat.neocities.org" target="_blank"><img src="!g/circat.png" alt="circat"></a>
 			<a title="petrapixel" href="https://petrapixel.neocities.org" target="_blank"><img src="!g/petrapixel.gif" alt="petrapixel"></a>
+			<a href="https://deadmall.xyz" target="_blank"><img src="!g/deadmall.gif" alt="deadmall"></a>
+			<a href="https://waywardlamb.neocities.org/" target="_blank"><img src="!g/waywardlamb.png" alt="waywardlamb"></a>
 		</div>
 
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
