--- a/doqmeat/vgs/fallout-new-vegas/index.html
+++ b/doqmeat/vgs/fallout-new-vegas/index.html
@@ -34,8 +34,11 @@
 		<div class="info"><b>developer: </b> obsidian entertainment</div>
 		<div class="info"><b>genre/type: </b> shooter, rpg, action </div>
 		<div class="info"><b>status:</b> not finished</div>
-		<div class="info"><b>crash / glitch count:</b> 12</div>
+		<div class="info"><b>crash / glitch count:</b> 15</div>
 		<h3>logs</h3>
+		<p><span class="date">29.jul.24</span> obsessed with these boxing gloves. and also my fit.</p>
+		<img src="boxing.jpg" alt="my courier next to arcade gannon with some sick boxing gloves." width="100%">
+		<hr>
 		<p><span class="date">24.jul.24</span> there is nothing in my brain except fallout.</p>
 		<p>nobody is asking but i basically manage my inventory on a <b>dumpster</b> that is in <i>goodsprings</i>. right next to this <i>mojave express dropbox</i>. it is honestly the best spot because i can take stuff from the dropbox AND i have a store right next to it as well in case i want to sell something i don't use. <small>though i am a big hoarder...</small> i got this stupid dinky dinosaur whatever the fuck toy from the <i>novac</i> gift shop and put it on top of the dropbox for decoration.</p>
 		<img src="240724%20(1).jpg" alt="screenshot of new vegas. there's a mojave express dropbox shown with a dinosaur toy on top of it as decoration." width="100%">
