--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -36,6 +36,9 @@
 		</article>
 -->
 			<article>
+				<p><b>31.jul.24 - 3pm</b> did a bit of javascript stuff today! learned how to use <code>localStorage</code> and implemented it on my <a href="/blog">blog</a> for the light / dark theme switcher. took me a bit bc the result would end up being <code>null</code> if it was your first time visiting that page so i just simply did a <i>if null do "light theme"</i> and it worked so that's going to be like that until i can learn to do it another way. i also figured i could rewrite the random music ad script on my <a href="/music">music</a> page in a more coherent and efficent way than the one shown from the template i took. <button onclick="showPic('!g/240731-js.jpg','screenshot of code editor','like look at this mess')">!g/240731-js.jpg</button></p>
+			</article>
+			<article>
 				<p><b>29.jul.24 - 6pm</b> personally i think retail / customer service should be mandatory for everyone so people KNOW what its like.</p>
 			</article>
 
@@ -44,7 +47,7 @@
 			</article>
 
 			<article>
-				<p><b>23.jul.24 - 1pm</b> after fighting for my life for the past 3 months filling out job applications i finally <b>got a job!!!!!</b> jesus, it was about damn time!!! i'm very happy because i really needed this. <small>who doesn't in this economy...</small> i hope i'll do good here :) i'll be getting some celebratory ice cream tomorrow <imh src="/!g/pix/dumy.gif" alt="emoji"></imh>
+				<p><b>23.jul.24 - 1pm</b> after fighting for my life for the past 3 months filling out job applications i finally <b>got a job!!!!!</b> jesus, it was about damn time!!! i'm very happy because i really needed this. <small>who doesn't in this economy...</small> i hope i'll do good here :) i'll be getting some celebratory ice cream tomorrow <img src="/!g/pix/dumy.gif" alt="emoji"></img>
 				</p>
 			</article>
 
